--- a/index.html
+++ b/index.html
@@ -19,13 +19,13 @@
             <button><a href="#">Learn more</a></button>
         </div>
         <div class="grid-image-box">
-            <div class="box col3" id="box1">box-1</div>
-            <div class="box " id="box2">box-2</div>
-            <div class="box col2 " id="box3">box-3</div>
-            <div class="box " id="box4">box-4</div>
-            <div class="box " id="box5">box-5</div>
-            <div class="box row2 " id="box6">box-6</div>
-            <div class="box col2 " id="box7">box-7</div>
+            <div class="box col3" id="box1">Mountain</div>
+            <div class="box " id="box2">Sun Rise</div>
+            <div class="box col2 " id="box3">Freezing COld</div>
+            <div class="box " id="box4">Spring Season</div>
+            <div class="box " id="box5">Hill View</div>
+            <div class="box row2 " id="box6">Lake</div>
+            <div class="box col2 " id="box7">Forest</div>
         </div>
     </div>
 </body>
